--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,6 @@ JavaCall = "494afd89-becb-516b-aafa-70d2670c0337"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
+PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
