--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JavaCall = "494afd89-becb-516b-aafa-70d2670c0337"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
