--- a/Project.toml
+++ b/Project.toml
@@ -13,4 +13,5 @@ Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TestImages = "5e47fb64-e119-507b-a336-dd2b206d9990"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
